frontend/src/components/SearchResults.module.css
.results_container {
  border-radius: 8px;
  background: white;
  box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.2);
}

.results_container_max_width {
  max-width: 1400px;
}

.results_list_container {
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.sticky_header {
  position: sticky !important;
  top: 56px !important;
  z-index: 1;
}

.results_header_row {
  border: 0px !important;
  background-color: white !important;
  border-radius: 8px 8px 0px 0px !important;
  user-select: none;
}

.results_header_inner {
  background-color: white !important;
}

.results_header {
  line-height: 30px;
  display: flex;
  font-size: 16px;
  font-weight: 600;
}

.one_line {
  display: block;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.up_btn:hover {
  cursor: pointer;
  color: rgb(180, 180, 180);
  transform: scale(1.1);
}

.list_grid_toggle {
  position: absolute;
  left: 5px;
}

:global .sticky {
  z-index: 1;
}

